<resources>
    <string name="app_name">Bixi</string>

    <string name="server_error_generic_message">Server error. Try again</string>
    <string name="server_forgot_password_success">The reset link has been sent. Check your email.</string>

    <string name="username">Username</string>
    <string name="timekeeper">Timekeeper</string>
    <string name="tasks">Tasks</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="logout_confirmation_title">Confirmation</string>
    <string name="logout_confirmation_details">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="new_text">New</string>
    <string name="in_progress">In progress</string>
    <string name="overdue">Overdue</string>
    <string name="finished">Finished</string>

    <string name="language">Language</string>
    <string name="choose_language">Choose app language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="turn_dark_mode">Enable or disable dark mode</string>
    <string name="about_the_app">About the app</string>
    <string name="app_version">App version</string>

    <string name="turn_on_the_light_for_start">Turn on the light bulb to start</string>
    <string name="turn_off_the_light_for_start">Turn off the light to exit</string>

    <string-array name="language_entries">
        <item>Romanian</item>
        <item>English</item>
    </string-array>

    <string-array name="language_values">
        <item>ro</item>
        <item>en</item>
    </string-array>

    <string name="create_task">Create task</string>
    <string name="edit_task">Edit task</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="check_list">Check list</string>
    <string name="check_name">Check name</string>
    <string name="attachments">Attachments</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="upload">Upload</string>
    <string name="select_employee">Select employee</string>
    <string name="time_interval">Time interval</string>
    <string name="start">Start</string>
    <string name="finish">End</string>
    <string name="cannot_select_a_past_date">You cannot select a past date/time</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="forgot_password_message">Enter your email to receive instructions on how to reset your password.</string>
    <string name="send">Send</string>
    <string name="reset_the_password">Reset the password</string>
    <string name="password">Password</string>

    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>

    <string name="comments">Comments</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="document">Document</string>
    <string name="choose_attachment">Choose attachment</string>
    <string name="now">Now</string>

    <string name="successfully_created">Successfully created</string>

    <string name="back">Back</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="open_external">Open externally</string>
    <string name="view">View</string>
    <string name="error">Error</string>

    <string name="unknown_file_type">Unknown file type</string>
    <string name="couldnt_load_file">Couldn\'t load file</string>
    <string name="couldnt_load_image">Couldn\'t load image</string>
    <string name="couldnt_load_document">Couldn\'t load document</string>
    <string name="document_not_found">Document not found</string>
    <string name="no_application_found_to_open_file">No application was found to open this file</string>
    <string name="permissions_required_for_attachments">Permissions are required for attachments</string>
    <string name="camera_permission_required">Camera permission is required</string>
    <string name="couldnt_take_photo">I couldn\'t open the camera to take the picture</string>
    <string name="storage_permission_required">Storage permission is required</string>

    <string name="waiting_for_gps_placeholder">Waiting for GPS...</string>
    <string name="confirm">Confirm</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>


    <!-- Strings for LocationDialogFragment with real-time accuracy -->

    <!-- Location search statuses -->
    <string name="searching_location">Searching for location…</string>
    <string name="searching_gps_signal">Searching for GPS signal…</string>
    <string name="searching_location_countdown">Searching for location… %d</string>
    <string name="improving_accuracy_countdown">Improving accuracy… %d</string>

    <!-- Confirmation buttons -->
    <string name="confirm_location">Confirm Location</string>
    <string name="confirm_location_low_accuracy">Confirm (Low Accuracy)</string>
    <string name="confirm_without_location">Close</string>

    <!-- GPS accuracy messages -->
    <string name="gps_accuracy_display">GPS Accuracy: %d meters</string>

    <!-- GPS messages -->
    <string name="gps_required_message">GPS must be enabled for this feature</string>
    <string name="gps_activation_error">Error activating GPS</string>
    <string name="gps_activation_failed">Could not activate GPS</string>

    <!-- GPS activation/deactivation messages -->
    <string name="gps_activated_title">GPS Activated</string>
    <string name="gps_activate_message">GPS has been activated for this function. Would you like to disable it now to save battery?</string>
    <string name="yes_disable">Yes, disable</string>
    <string name="no_keep_active">No, keep active</string>
    <string name="cannot_open_location_settings">Could not open location settings</string>

    <!-- Error messages -->
    <string name="location_permission_required">Location permission is required for this feature</string>
    <string name="location_timeout">Timeout getting location. Please try again.</string>
    <string name="security_error_location">Security error accessing location</string>

    <!-- Android version messages -->
    <string name="android_version_not_supported">This feature requires Android 10 or newer</string>
</resources>