<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".activities.LoginActivity">

    <FrameLayout
        android:id="@+id/fl_logo_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_above="@+id/tv_app_name"
        android:layout_centerHorizontal="true">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:src="@drawable/ic_logo"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_above="@+id/usernameLayout"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name"/>

    <com.example.bixi.customViews.ValidatedTextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_centerVertical="true"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.example.bixi.customViews.ValidatedTextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Parolă"
        android:layout_below="@+id/usernameLayout"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_below="@+id/passwordLayout"
        android:layout_marginTop="40dp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/md_theme_primary"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:layout_below="@+id/btnRegister"/>

</RelativeLayout>